# agentic-ai-kris

./: .env.example  .gitignore  README.md  app.py  chainlit.md  docker-compose.yml  launch.json   pyproject.toml  run.py  run.sh
DOC/: 01-architecture.md  02-configuration.md  03-llm-providers.md  04-skills.md  05-agents-and-registry.md  06-orchestration.md  07-rag.md  08-chainlit-ui.md  09-request-lifecycle.md  10-testing-and-experiments.md  11-extending.md  README.md
skills/critique/: SKILL.md
skills/document-solution/: SKILL.md
skills/web-research/: SKILL.md  reference.md
skills/web-research/scripts/: extract_claims.py
src/agentic_kris/: __init__.py  config.py
src/agentic_kris/agents/: __init__.py  base.py  critic.py  registry.py  researcher.py  summarizer.py
src/agentic_kris/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py
src/agentic_kris/orchestration/: __init__.py  supervisor.py  workflow.py
src/agentic_kris/rag/: __init__.py  memory_store.py  pgvector_store.py  retriever.py
src/agentic_kris/skills/: __init__.py  loader.py  models.py
tests/: conftest.py  test_factory.py  test_registry.py  test_skills.py  test_supervisor.py  test_workflow.py
